<?xml version="1.0" encoding="utf-8" ?>
<resources>
    <string name="app_name">Gig Click</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_library">Library</string>
    <string name="title_metronome">Metronome</string>
    <string name="title_edit">Edit</string>
    <string name="title_settings">Settings</string>
    <string name="title_live">Live</string>
    <string name="title_about">About</string>
    <string name="title_help">Help</string>
    <string name="about">This app was created by D. Hoedtke.</string>
    <string name="label_bpm">BPM</string>
    <string name="label_play">Play</string>
    <string name="title_more">More</string>
    <string name="label_tap">Tap</string>
    <string name="channel_name">Gig Click</string>
    <string name="channel_description">run state of metronome</string>
    <string name="content_knob">knob and outer ring</string>
    <string name="content_ring">blue ring touch effect</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_apply">apply</string>
    <string name="title_remove">Remove</string>
    <string name="example_title">Teacher, Teacher!</string>
    <string name="example_comment">This is a simple comment</string>
    <string name="label_setlist">Tracklist</string>
    <string name="example_bpm">120</string>
    <string name="example_number">12</string>
    <string name="caption_exit">Exit</string>
    <string name="example_tempo_label">Allegro</string>
    <string name="title_exit"><i>Exit Live Mode</i></string>
    <string name="brand_label">Gig Click Metronome</string>
    <string name="title_group_mode">Mode</string>
    <string name="title_group_actions">Actions</string>
    <string name="title_group_storage">Storage</string>


    <string name="info_text">
        This app was developed by Damian Hoedtke.\n \n \t 2020 &#169; Damian Hoedtke
    </string>

    <string name="example_artist">Jinjer</string>
    <string name="label_artist">Artist • \ </string>
    <string name="label_track_number">Track\ </string>
    <string name="example_set">Tanz in den Mai - 1</string>
    <string name="title_complex">Complex</string>
    <string name="title_pager_sets">Sets</string>
    <string name="title_pager_tracks">All Tracks</string>
    <string name="title_sort">Sort by</string>
    <string name="menu_by_name">Name</string>
    <string name="label_sort_by">Sort by</string>
    <string name="title_by_date">Date</string>
    <string name="title_by_name">Name</string>
    <string name="title_by_popularity">Popularity</string>
    <string name="title_search">search</string>
    <string name="label_number_of_tracks">Tracks</string>
    <string name="dot">•</string>
    <string name="label_n_tracks">\ Tracks</string>
    <string name="example_date">May 13 - 1999</string>
    <string name="name_set_transition">set_transition</string>
    <string name="title_your_sets">Your Sets</string>
    <string name="example_n_tracks">6 Tracks</string>
    <string name="n_tracks">%1$d Tracks</string>
    <string name="example_n_sets">6 Sets</string>
    <string name="n_sets">•\ \ \ %1$d Sets</string>
    <string name="label_title">Title</string>
    <string name="label_tempo">Tempo</string>
    <string name="label_beats">Beats</string>
    <string name="label_comment">Comment</string>
    <string name="label_subdivisions">Subdivisions</string>
    <string name="set_details">Set Details</string>
    <string name="track_details">Track Details</string>
    <string name="title_edit_track">Edit Track</string>
    <string name="example_bar">4 / 8</string>
    <string name="time_signature">%d / %d</string>
    <string name="example_subdivision">8-16-16</string>
    <string name="title_cancel">cancel</string>
    <string name="slash">/</string>
    <string name="label_time_signature">Time Signature</string>
    <string name="default_metric">4</string>
    <string name="label_speed_up">Speed up</string>
    <string name="every">Every</string>
    <string name="bar">bar</string>
    <string name="by">by</string>
    <string name="label_mute">Mute</string>
    <string name="bars">bars.</string>
    <string name="mute">Mute</string>
    <string name="play">Play</string>
    <string name="dialog_select_set_msg">Select a Set!</string>
    <string name="dialog_select_set_title">Load new Set</string>
    <string name="title">Title</string>
    <string name="helper_comment">Optional</string>
    <string name="required">Required</string>
    <string name="title_track_details">Track Details</string>
    <string name="error_beats">This feature has been left for future updates. For now it is considered sufficient to not use modified rhythms in the live mode.</string>
    <string name="label_tempo_text">Tempo Text</string>
    <string name="title_set">Set Details</string>
    <string name="set_date_format">MMM, d \'\'yy</string>
    <string name="add_set_label">Add Set</string>
    <string name="new_set_label">New Set</string>
    <string name="fave_set_ic_desc">favorite set</string>
    <string name="menu_select_all">Select all</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_favorite">Mark as favorite</string>
    <string name="ic_delete_desc">delete icon</string>
    <string name="ic_edit_desc">edit icon</string>
    <string name="title_library_bottom_dialog">Options</string>
    <string name="menu_favorite_undo">Undo favorite</string>
    <string name="fab_more_desc">inflate menu</string>
    <string name="fab_edit_desc">edit set name</string>
    <string name="fab_fave_desc">mark as favorite</string>
    <string name="fab_fave_undo_desc">undo mark as favorite</string>
    <string name="fab_calendar_desc">edit calendar</string>
    <string name="ic_details_desc">view details</string>
    <string name="title_details">Show details</string>
    <string name="title_change_title">Change title</string>
    <string name="title_edit_set_title_dialog">Edit title</string>
    <string name="msg_edit_set_title_dialog">Type a catching title!</string>
    <string name="ic_comment_desc">edit comment</string>
    <string name="title_comment">Change comment</string>
    <string name="ic_reorder_desc">reorder tracks</string>
    <string name="title_reorder">Reorder</string>
    <string name="title_edit_track_title_dialog">Edit title</string>
    <string name="msg_edit_track_title_dialog">Type the track title!</string>
    <string name="title_edit_track_comment_dialog">Edit comment</string>
    <string name="msg_edit_track_comment_dialog">Write a short text!</string>
    <string name="set_img_desc">set profile image</string>
    <string name="toast_set_deleted">$1%s was deleted</string>
    <string name="example_clock">10:32 AM</string>
    <string name="button_play_desc">button play and stop</string>
    <string name="set_detail_transition_name">set_to_set_detail_transition</string>
    <string name="icon_close">icon close action</string>
    <string name="title_practice_dialog">Practice Options</string>
    <string name="title_division_dialog">Division Settings</string>
    <string name="title_sound_dialog">Sound Settings</string>
    <string name="title_set_details">Set Details</string>
    <string name="track_detail_transition_name">set to track detail transition</string>
</resources>
