<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/menu_search"
        android:icon="@drawable/ic_round_search_primary_24dp"
        app:showAsAction="ifRoom"
        android:title="@string/title_search" />

    <item android:id="@+id/menu_sort"
        android:title="@string/title_sort"
        android:icon="@drawable/ic_round_sort_primary_24dp"
        app:showAsAction="always"
        >

        <menu>
            <group android:id="@+id/group_sort">

                <item
                    android:title="@string/title_sort"
                    android:checkable="false"
                    android:enabled="false"
                    />

                <item
                    android:id="@+id/menu_by_name"
                    android:title="@string/title_by_name" />

                <item
                    android:id="@+id/menu_by_date"
                    android:title="@string/title_by_date" />

                <item
                    android:id="@+id/menu_by_popularity"
                    android:title="@string/title_by_popularity" />

            </group>
        </menu>

    </item>

</menu>