<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorBackground"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:layout_constraintBottom_toTopOf="@id/item_reorder"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_library_bottom_dialog"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/colorTextDisabled"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/item_reorder"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:layout_constraintBottom_toTopOf="@id/item_edit"
        android:orientation="horizontal"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        >

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/ic_reorder_desc"
            android:src="@drawable/ic_reorder_24dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_reorder"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="32dp"
            android:textSize="18sp"
            android:textStyle="bold"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/item_edit"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:layout_constraintBottom_toTopOf="@id/item_comment"
        android:orientation="horizontal"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        >

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/ic_edit_desc"
            android:src="@drawable/ic_title_24dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_change_title"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="32dp"
            android:textSize="18sp"
            android:textStyle="bold"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/item_comment"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:layout_constraintBottom_toTopOf="@id/item_delete"
        android:orientation="horizontal"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        >

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/ic_comment_desc"
            android:src="@drawable/ic_comment_24dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_comment"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="32dp"
            android:textSize="18sp"
            android:textStyle="bold"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/item_delete"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="horizontal"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        >

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/ic_delete_desc"
            android:src="@drawable/ic_delete_24dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_delete"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="32dp"
            android:textSize="18sp"
            android:textStyle="bold"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>