<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    android:paddingStart="24dp"
    android:paddingEnd="24dp"
    android:background="@drawable/track_background_color_state"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/item_set_view"
    android:foreground="?selectableItemBackground"
    >


    <ImageView
        android:id="@+id/text_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_playlist_primary_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <TextView
        android:id="@+id/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/example_set"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/text_number"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="24dp"
        />

    <TextView
        android:id="@+id/text_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/example_date"
        android:textSize="12sp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="@id/text_title"
        app:layout_constraintTop_toBottomOf="@id/text_title"
        android:layout_marginTop="8dp"
        android:textColor="@color/colorTextWeak"
        />

    <TextView
        android:id="@+id/label_n_tracks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_n_tracks"
        android:textSize="14sp"
        android:textColor="@color/colorTextDisabled"
        android:layout_marginBottom="0dp"
        app:layout_constraintStart_toEndOf="@id/text_n_tracks"
        app:layout_constraintBottom_toBottomOf="@id/text_n_tracks" />

    <TextView
        android:id="@+id/dot_n_tracks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dot"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textColor="@color/colorTextDisabled"
        android:layout_marginStart="24dp"
        app:layout_constraintStart_toEndOf="@id/text_title"
        app:layout_constraintBottom_toBottomOf="@id/text_title"
        />

    <TextView
        android:id="@+id/text_n_tracks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/example_number"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textColor="@color/colorTextDisabled"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@id/dot_n_tracks"
        app:layout_constraintBottom_toBottomOf="@id/dot_n_tracks"
        />

</androidx.constraintlayout.widget.ConstraintLayout>