<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.live.LiveFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/text_bpm"
            android:layout_width="96dp"
            android:includeFontPadding="false"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="56sp"
            android:text="@string/example_bpm"
            android:layout_marginTop="56dp"
            android:layout_marginStart="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/label_track_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu_light"
            android:text="@string/label_track_number"
            android:textAlignment="center"
            android:textColor="@color/colorTextDisabled"
            android:textSize="14sp"
            android:layout_marginTop="50dp"
            app:layout_constraintStart_toStartOf="@id/text_title"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_track_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu_light"
            android:text="@string/example_number"
            android:textAlignment="center"
            android:textColor="@color/colorTextDisabled"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@id/label_track_number"
            app:layout_constraintTop_toTopOf="@+id/label_bpm" />

        <View
            android:layout_width="1dp"
            android:layout_height="54dp"
            app:layout_constraintTop_toTopOf="@id/label_track_number"
            app:layout_constraintEnd_toStartOf="@id/label_track_number"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="3dp"
            android:background="@color/colorAccentTransparent"
            />


        <TextView
            android:id="@+id/text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu_light"
            android:text="@string/example_title"
            android:textAlignment="center"
            android:textColor="@color/colorTextHighlight"
            android:textSize="22sp"
            android:layout_marginStart="24dp"
            app:layout_constraintStart_toEndOf="@+id/text_bpm"
            app:layout_constraintTop_toBottomOf="@+id/label_track_number" />

        <TextView
            android:id="@+id/label_artist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_artist"
            android:textColor="@color/colorTextDisabled"
            app:layout_constraintStart_toStartOf="@id/text_title"
            app:layout_constraintTop_toBottomOf="@+id/text_title" />

        <TextView
            android:id="@+id/text_artist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/example_artist"
            android:textColor="@color/colorTextDisabled"
            app:layout_constraintStart_toEndOf="@id/label_artist"
            app:layout_constraintTop_toBottomOf="@+id/text_title" />

        <TextView
            android:id="@+id/text_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/example_comment"
            android:textColor="@color/colorTextWeak"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/text_tempo"
            app:layout_constraintStart_toStartOf="@id/label_artist" />

        <TextView
            android:id="@+id/label_bpm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_bpm"
            android:textColor="@color/colorTextDisabled"
            android:textSize="12sp"
            android:layout_marginTop="52dp"
            app:layout_constraintEnd_toEndOf="@+id/text_bpm"
            app:layout_constraintStart_toStartOf="@+id/text_bpm"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_tempo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/example_tempo_label"
            android:textColor="@color/colorTextWeak"
            android:textStyle="italic"
            android:textSize="16sp"
            android:textAlignment="center"
            android:ems="5"
            app:layout_constraintTop_toBottomOf="@+id/text_bpm"
            app:layout_constraintStart_toStartOf="@+id/text_bpm"
            app:layout_constraintEnd_toEndOf="@id/text_bpm"
            />

        <View
            android:id="@+id/pendulum_background"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/text_tempo"
            android:background="@drawable/pendulum_background"
            />

        <com.damhoe.gigclick.ui.metronome.PendulumView
            android:id="@+id/pendulum_foreground"
            android:layout_width="match_parent"
            android:layout_height="22dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toTopOf="@id/pendulum_background"
            app:layout_constraintBottom_toBottomOf="@id/pendulum_background"
            app:layout_constraintStart_toStartOf="@id/pendulum_background"
            app:layout_constraintEnd_toEndOf="@id/pendulum_background"
            android:background="@android:color/transparent"
            />

        <TextView
            android:id="@+id/label_recycler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/pendulum_background"
            app:layout_constraintStart_toStartOf="@id/pendulum_background"
            android:text="@string/label_setlist"
            android:textColor="@color/colorTextDisabled"
            android:layout_marginTop="24dp"
            />

        <ImageButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            style="@style/ImageButtonInvisible"
            app:srcCompat="@drawable/ic_round_playlist_add_black_24dp"
            app:tint="@color/colorAccent"
            app:layout_constraintTop_toTopOf="@id/label_recycler"
            app:layout_constraintStart_toEndOf="@id/label_recycler"
            app:layout_constraintBottom_toBottomOf="@id/label_recycler"
            android:layout_marginStart="24dp"
            />

        <TextView
            android:id="@+id/text_set"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/pendulum_background"
            app:layout_constraintEnd_toEndOf="@id/pendulum_background"
            android:text="@string/example_set"
            android:textColor="@color/colorTextDisabled"
            android:layout_marginTop="24dp"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/label_recycler"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/button_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/FABDark"
            android:src="@drawable/ic_play_black_24dp"
            android:tint="@color/colorTextSecondary"
            android:layout_marginBottom="24dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>