<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        tools:context=".ui.metronome.SoundDialog">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            app:layout_constraintTop_toTopOf="parent"
            android:elevation="8dp"
            android:background="@color/colorBackground"
            >

            <com.google.android.material.button.MaterialButton
                style="@style/GigClickTheme.IconButton"
                android:id="@+id/icon_close"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:icon="@drawable/ic_close_24dp"
                />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_sound_dialog"
                android:textAppearance="@style/GigClickTheme.TextAppearance.Headline6"
                android:layout_marginStart="24dp"
                android:includeFontPadding="false"
                app:layout_constraintTop_toTopOf="@id/icon_close"
                app:layout_constraintBottom_toBottomOf="@id/icon_close"
                app:layout_constraintStart_toEndOf="@id/icon_close"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:background="@color/colorAccent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/text_bpm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:textAlignment="center"
            android:textSize="36sp"
            android:ems="3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header"/>

        <TextView
            android:id="@+id/label_bpm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_bpm"
            android:textColor="@color/colorTextDisabled"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/text_bpm"
            app:layout_constraintEnd_toEndOf="@+id/text_bpm"
            app:layout_constraintStart_toStartOf="@+id/text_bpm"
            android:layout_marginBottom="4dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="Here you should handle Sounds."
            android:textStyle="italic"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_apply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_apply"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="24dp"
            android:layout_marginEnd="16dp"
            style="@style/GigClickTheme.PositiveButton"
            />

        <com.google.android.material.button.MaterialButton
            app:cornerRadius="4dp"
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/GigClickTheme.NegativeButton"
            android:text="@string/title_remove"
            app:layout_constraintEnd_toStartOf="@id/button_apply"
            app:layout_constraintTop_toTopOf="@id/button_apply"
            app:layout_constraintBottom_toBottomOf="@id/button_apply"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>